style.css
/* ... */
        .legal-body-container .legal .clause-set .clause-numbering i {
          font-size: 0.3em;
          margin-left: 2em;
          margin-top: 2em; }
      .legal-body-container .legal .clause-set .clause-text {
        flex: 1; }
        .legal-body-container .legal .clause-set .clause-text .subtitle {
          font-weight: bold;
          margin-bottom: 5px; }
        .legal-body-container .legal .clause-set .clause-text p {
          margin-top: 0; }
        .legal-body-container .legal .clause-set .clause-text a {
          color: darkblue;
          text-decoration: underline; }
  @media screen and (min-width: 800px) {
    .legal-body-container .legal {
      padding-left: 0px;
      padding-right: 0px; } }

.faq-header-container {
  background: #dfe1f2;
  padding-top: 3em;
  padding-bottom: 3em; }
  .faq-header-container h1 {
    color: #505798; }
  .faq-header-container .row {
    align-items: center; }
    .faq-header-container .row div {
      margin-bottom: 24px; }

.faq-body-container {
  padding-top: 4em;
  padding-bottom: 4em; }
  .faq-body-container .faq-note {
    max-width: 80ch;
    margin: 0 auto;
    padding-bottom: 30px; }
  .faq-body-container .faq-group {
    max-width: 80ch;
    margin: 0 auto;
    padding-bottom: 80px; }
    .faq-body-container .faq-group h3 {
      font-size: 2em;
      color: #505798;
      margin-bottom: 30px; }
    .faq-body-container .faq-group .all-questions .question-answer-group label {
      margin: 0;
      padding: 0; }
    .faq-body-container .faq-group .all-questions .question-answer-group input {
      display: none; }
    .faq-body-container .faq-group .all-questions .question-answer-group .question {
      display: flex;
      font-weight: bold;
      width: 100%;
      cursor: pointer;
      background: #f6f7fa;
      padding-left: 48px;
      padding-right: 48px;
      padding-top: 24px;
      padding-bottom: 24px;
      margin-bottom: 10px;
      border-radius: 8px; }
      .faq-body-container .faq-group .all-questions .question-answer-group .question .icon {
        display: flex;
        width: 20px;
        height: 20px;
        background: url("img/bx-chevron-right.svg") no-repeat center center;
        background-size: 15px 15px;
        margin-right: 10px;
        transition: all 0.3s ease-out; }
      .faq-body-container .faq-group .all-questions .question-answer-group .question span {
        color: #505798;
        width: 95%; }
    .faq-body-container .faq-group .all-questions .question-answer-group .answer {
      box-shadow: 0px 0px 10px rgba(216, 222, 235, 0.5);
      border-radius: 8px;
      display: none;
      padding-left: 48px;
      padding-right: 48px;
      padding-top: 24px;
      padding-bottom: 24px;
      margin-bottom: 10px;
      visibility: hidden; }
      .faq-body-container .faq-group .all-questions .question-answer-group .answer p {
        padding: 10px 0px; }
      .faq-body-container .faq-group .all-questions .question-answer-group .answer img {
        width: 100%;
        max-width: 320px;
        height: auto; }
        .faq-body-container .faq-group .all-questions .question-answer-group .answer img.img-full {
          width: 100%;
          max-width: 100%;
          height: auto; }
      .faq-body-container .faq-group .all-questions .question-answer-group .answer ul {
        list-style-type: disc;
        margin: 0.2em 1.2em; }
        .faq-body-container .faq-group .all-questions .question-answer-group .answer ul li {
          padding: 0.2em; }
    .faq-body-container .faq-group .all-questions .question-answer-group input:checked ~ .answer {
      display: block;
      visibility: visible;
      padding-top: 10px;
      max-height: 3000px;
      opacity: 100%;
      transition: all 0.3s ease-out; }
    .faq-body-container .faq-group .all-questions .question-answer-group input:checked ~ .question .icon {
      transform: rotate(90deg);
      transition: all 0.3s ease-out; }

.index-page .intro-section {
  padding-bottom: 4em;
  background-color: #f6f7fa; }
  .index-page .intro-section .container .row {
    justify-content: center;
    align-items: center; }
    .index-page .intro-section .container .row h1 {
      color: #505798;
      margin-bottom: 16px; }
    .index-page .intro-section .container .row .display-1 {
      display: none; }
    .index-page .intro-section .container .row .display-2 {
      display: block; }
    @media (min-width: 768px) {
      .index-page .intro-section .container .row .display-1 {
        display: block; }
      .index-page .intro-section .container .row .display-2 {
        display: none; } }
    .index-page .intro-section .container .row .redeem-vouchers {
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 1em; }
      .index-page .intro-section .container .row .redeem-vouchers img {
        width: 100%; }
    .index-page .intro-section .container .row .floating {
      animation-name: floating;
      animation-duration: 5s;
      animation-iteration-count: infinite;
      animation-timing-function: ease-in-out;
      margin-top: 5px; }

@keyframes floating {
  0% {
    transform: translate(0, 0px); }
  50% {
    transform: translate(0, 10px); }
  100% {
    transform: translate(0, 0px); } }

.index-page .users-section {
  padding-bottom: 4em;
  padding-top: 4em; }
  .index-page .users-section .users {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    text-align: center; }
    .index-page .users-section .users .users-icon {
      width: 100%;
      padding-top: 110%;
      position: relative;
      margin-bottom: 24px; }
      .index-page .users-section .users .users-icon img {
        position: absolute;
        width: 100%;
        left: 0;
        bottom: 0;
        right: 0; }
/* ... */

